GF Embedded updated, removed add-opens (not needed, only one warning)